--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^6.21.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.3.1"
+    "sonner": "^1.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
